Fix responsive of main views

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -55,195 +55,115 @@
 
     <div class="section-2">
         <h2>Conoce nuestra variedad de productos</h2>
-        <owl-carousel-o [options]="customOptions">
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                        <h3>Aceitunas</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+        <div class="section-2-div">
+            <owl-carousel-o [options]="customOptions">
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                            <h3>Aceitunas</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>  
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
-                        <h3>Frutas</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>  
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
+                            <h3>Frutas</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
-                        <h3>Cacao</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
+                            <h3>Cacao</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
-                        <h3>Granos</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
+                            <h3>Granos</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
-                        <h3>Verduras</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
+                            <h3>Verduras</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                        <h3>Aceitunas</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                            <h3>Aceitunas</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>  
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
-                        <h3>Frutas</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>  
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
+                            <h3>Frutas</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
-                        <h3>Cacao</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
+                            <h3>Cacao</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
-                        <h3>Granos</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
+                            <h3>Granos</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-            <ng-template carouselSlide>
-                <a href="https://www.google.com" class="seccion-prod">
-                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
-                        <h3>Verduras</h3>
-                        <div class="sec-2-oculto d-flex justify-content-center">
-                            <p>VER PRODUCTO</p>
+                    </a>
+                </ng-template>
+                <ng-template carouselSlide>
+                    <a href="https://www.google.com" class="seccion-prod">
+                        <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
+                            <h3>Verduras</h3>
+                            <div class="sec-2-oculto d-flex justify-content-center">
+                                <p>VER PRODUCTO</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </ng-template>
-        </owl-carousel-o>
-        <!-- <div class="autoplay">
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <h3>Aceitunas</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
-                    <h3>Frutas</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
-                    <h3>Cacao</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
-                    <h3>Granos</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
-                    <h3>Verduras</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <h3>Aceitunas</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
-                    <h3>Frutas</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
-                    <h3>Cacao</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
-                    <h3>Granos</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-            <a href="https://www.google.com" class="seccion-prod">
-                <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
-                    <h3>Verduras</h3>
-                    <div class="sec-2-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-            </a>
-        </div> -->
+                    </a>
+                </ng-template>
+            </owl-carousel-o>
+        </div>
     </div>
 
     <div class="section-3">
-        <div class="d-flex justify-content-between align-items-center">
-            <h2>Nuevos productos</h2>
+        <div class="section-3-header d-flex justify-content-between align-items-center">
+            <h2>Nuevos Productos</h2>
             <a href="" class="btn btn-ver-catalogo">VER CATÁLOGO</a>
         </div>
         <div class="row">
@@ -358,58 +278,11 @@
                 </a>
             </div>
         </div>
-        <!-- <div class="autoplay-2">
-            <a href="https://www.google.com" class="seccion-3-prod">
-                <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <div class="sec-3-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-                <h4>Cúrcuma en polvo</h4>
-                <p>S/20.00</p>
-            </a>
-            <a href="https://www.google.com" class="seccion-3-prod">
-                <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <div class="sec-3-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-                <h4>Jengibre en polvo</h4>
-                <p>S/18.90</p>
-            </a>
-            <a href="https://www.google.com" class="seccion-3-prod">
-                <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <div class="sec-3-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-                <h4>Palta en cubos conge...</h4>
-                <p>S/32.00</p>
-            </a>
-            <a href="https://www.google.com" class="seccion-3-prod">
-                <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <div class="sec-3-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-                <h4>Papa amarilla entera...</h4>
-                <p>S/9.90</p>
-            </a>
-            <a href="https://www.google.com" class="seccion-3-prod">
-                <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
-                    <div class="sec-3-oculto d-flex justify-content-center">
-                        <p>VER PRODUCTO</p>
-                    </div>
-                </div>
-                <h4>Banano entero</h4>
-                <p>S/12.50</p>
-            </a>
-        </div> -->
 
     </div>
 
     <div class="section-4">
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="section-4-header d-flex justify-content-between align-items-center">
             <h2>Últimas Novedades</h2>
             <a href="" class="btn btn-ver-novedades">IR A NOVEDADES</a>
         </div>
