--- a/src/app/pages/catalogo-detalle/catalogo-detalle.component.scss
+++ b/src/app/pages/catalogo-detalle/catalogo-detalle.component.scss
@@ -5,10 +5,10 @@
 }
 
 .breadcrumb-custom{
-    padding-left: 140px;
-    padding-right: 140px;
 }
-.breadcrumb-custom p{
+.breadcrumb-custom{
+    margin-left: 140px;
+    margin-right: 140px;
     color: #11434c;
     font-weight: 600;
     font-size: 1.25rem;
@@ -24,8 +24,8 @@
 }
 
 .section-1{
-    padding-left: 140px;
-    padding-right: 140px;
+    margin-left: 140px;
+    margin-right: 140px;
 }
 .div-imgs-1{
     width: 15%;
@@ -70,7 +70,7 @@
     font-size: 1.7rem;
     line-height: 1.7rem;
     text-align: justify;
-    margin-bottom: 20pxs;
+    margin-bottom: 20px;
 }
 .prod-precio{
     color: #2db18a;
@@ -99,7 +99,7 @@
     background-color: #11434c;
     color: white;
     font-size: 1.4rem;
-    padding: 6px 18px;
+    padding: 6px 18px 3px;
     border: 2px solid transparent;
     border-radius: 10px;
 }
@@ -154,15 +154,15 @@
     color: #11434c;
     font-size: 2.2rem;
     font-weight: 600;
-    padding: 6px 25px;
+    padding: 6px 25px 3px;
     border-radius: 35px;
 }
 .detalles-prod-div .active{
     background-color: #2db18a;
 }
 .tab-content{
-    padding-left: 260px;
-    padding-right: 260px;
+    margin-left: 260px;
+    margin-right: 260px;
     margin-bottom: 100px;
 }
 .cont-detalle{
@@ -172,6 +172,9 @@
 .titulo-detalle{
     color: #11434c;
     font-size: 2.3rem;
+}
+.sub-detalle{
+    flex-shrink: 0;
 }
 .det-1{
     width: 250px;
@@ -184,18 +187,23 @@
 }
 .det-3{
    margin-bottom: 0;
-   flex-basis: auto;
+//    flex-basis: auto;
 }
 
 .section-3{
     background-color: #ebf7f3;
-    padding: 50px 140px;
+    padding: 50px 125px;
 }
 .section-3 h2{
 	font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+}
+.section-3-header{
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 15px;
 }
 .btn-ver-catalogo{
 	background-color: #11434c;
@@ -262,4 +270,196 @@
 .seccion-3-prod:hover .sec-3-oculto{
 	display: flex !important;
 	visibility: visible !important;
+}
+
+
+@media (max-width: 1600px) {
+    .breadcrumb-custom{
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .section-1{
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .tab-content{
+        margin-left: 220px;
+        margin-right: 220px;
+    }
+    .section-3{
+        padding-left: 85px;
+        padding-right: 85px;
+    }
+}
+@media (max-width: 1440px) {
+    .breadcrumb-custom{
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+    .section-1{
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+    .tab-content{
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+    .section-3{
+        padding-left: 55px;
+        padding-right: 55px;
+    }
+}
+@media (max-width: 1200px) {
+    .breadcrumb-custom{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .section-1{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .tab-content{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .section-3{
+        padding-left: 35px;
+        padding-right: 35px;
+    }
+    .section-3-header > h2{
+        font-size: 3rem;
+    }
+}
+@media (max-width: 992px) {
+    .breadcrumb-custom{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .section-1{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .tab-content{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .section-3{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .section-3-header{
+        flex-direction: column !important;
+        align-items: stretch !important;
+    }
+    .btn-ver-catalogo{
+        align-self: start;
+    }
+    // .cont-detalle > div{
+    //     flex-wrap: wrap;
+    // }
+    .det-1{
+        width: auto;
+    }
+    .det-2{
+        // margin-right: 0;
+    }
+    .section-3-header > h2{
+        font-size: 2.8rem;
+    }
+}
+@media (max-width: 991px) {
+    .carousel-item > img{
+        width: 100%;
+    }
+    .prod-descripcion{
+        padding-top: 50px;
+        padding-left: 0;
+    }
+}
+@media (max-width: 768px) {
+    .prod-descripcion > h1{
+        font-size: 3rem;
+        line-height: normal;
+    }
+    .prod-descripcion > p{
+        font-size: 1.5rem;
+        line-height: normal;
+    }
+    .prod-precio-1{
+        font-size: 3.5rem;
+        line-height: normal;
+    }
+    .prod-precio-2{
+        font-size: 1.2rem;
+        line-height: normal;
+    }
+}
+@media (max-width: 576px) {
+    .cont-detalle > div{
+        flex-direction: column !important;
+    }
+    .titulo-detalle{
+        font-size: 2rem;
+    }
+}
+@media (max-width: 425px) {
+    .breadcrumb-custom{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+    .section-1{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+    .prod-descripcion > h1{
+        font-size: 2.5rem;
+    }
+    .prod-descripcion > p{
+        font-size: 1.2rem;
+    }
+    .prod-precio-1{
+        font-size: 2.5rem;
+    }
+    .prod-precio-2{
+        font-size: 1rem;
+        max-width: none;
+    }
+    .prod-cantidad{
+        align-self: center !important;
+    }
+    .prod-cantidad > button{
+        font-size: 1rem;
+    }
+    .num-cantidad{
+        font-size: 1.8rem;
+    }
+    .detalles-prod-div > button{
+        font-size: 1.8rem;
+    }
+    .tab-content{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+    .titulo-detalle{
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    .section-3-header{
+        padding-left: 0;
+        padding-right: 0;
+        align-items: center !important;
+    }
+    .section-3-header > h2{
+        font-size: 2.4rem;
+        text-align: center;
+    }
+    .btn-ver-catalogo{
+        align-self: center;
+        font-size: 1.1rem;
+    }
+}
+@media (max-width: 375px) {
+    .section-3-header > h2{
+        font-size: 2.2rem;
+    }
 }
