--- a/src/app/pages/catalogo/catalogo.component.html
+++ b/src/app/pages/catalogo/catalogo.component.html
@@ -1,98 +1,100 @@
 <div class="section_general section-catalogo">
     <h1 class="text-center">Nuestros Productos</h1>
 
-    <owl-carousel-o [options]="customOptions">
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/todos.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Todos</p>
+    <div class="div-categorias">
+        <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/todos.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Todos</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/aceitunas.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Aceitunas</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/aceitunas.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Aceitunas</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/frutas.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Frutas</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/frutas.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Frutas</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/cacao.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Cacao</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/cacao.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Cacao</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/granos.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Granos</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/granos.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Granos</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/todos.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Todos</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/todos.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Todos</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/aceitunas.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Aceitunas</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/aceitunas.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Aceitunas</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/frutas.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Frutas</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/frutas.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Frutas</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/cacao.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Cacao</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/cacao.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Cacao</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-        <ng-template carouselSlide>
-            <a href="https://www.google.com" class="categoria-div">
-                <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/granos.jpg')">
-                    <div class="descripcion-categoria d-flex justify-content-center">
-                        <p>Granos</p>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="categoria-div">
+                    <div class="categoria-sub d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/catalogo/granos.jpg')">
+                        <div class="descripcion-categoria d-flex justify-content-center">
+                            <p>Granos</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </ng-template>
-    </owl-carousel-o>
+                </a>
+            </ng-template>
+        </owl-carousel-o>
+    </div>
 
     <!-- <div class="autoplay">
         <a href="https://www.google.com" class="categoria-div">
@@ -335,7 +337,7 @@
         </div>
     </div>
 
-    <div class="d-flex justify-content-end">
+    <div class="div-paginador d-flex justify-content-end">
         <button class="btn num-pagina pagina-activa">01</button>
         <button class="btn num-pagina">02</button>
         <button class="btn num-pagina">03</button>
