--- a/src/app/pages/catalogo/catalogo.component.scss
+++ b/src/app/pages/catalogo/catalogo.component.scss
@@ -1,15 +1,31 @@
 .section-catalogo{
     /* padding-left: 140px; */
     /* padding-right: 140px; */
-    padding: 100px 140px;
+    // padding: 100px 140px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 .section-catalogo > h1{
     font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
 	margin-bottom: 40px;
+	margin-left: 140px;
+	margin-right: 140px;
 }
-
+.div-categorias{
+	margin-left: 126px;
+	margin-right: 126px;
+	margin-bottom: 60px;
+}
+.row{
+	margin-left: 125px;
+	margin-right: 125px;
+}
+.div-paginador{
+	margin-left: 140px;
+	margin-right: 140px;
+}
 .categoria-div{
     display: block;
 	text-decoration: none;
@@ -188,4 +204,109 @@
     .col-custom{
         width: 20%;
     }
+}
+
+@media (max-width: 1600px) {
+	.section-catalogo > h1{
+		margin-left: 100px;
+		margin-right: 100px;
+	}
+	.div-categorias{
+		margin-left: 86px;
+		margin-right: 86px;
+	}
+	.row{
+		margin-left: 85px;
+		margin-right: 85px;
+	}
+	.div-paginador{
+		margin-left: 100px;
+		margin-right: 100px;
+	}
+}
+@media (max-width: 1440px) {
+	.section-catalogo > h1{
+		margin-left: 70px;
+		margin-right: 70px;
+	}
+	.div-categorias{
+		margin-left: 56px;
+		margin-right: 56px;
+	}
+	.row{
+		margin-left: 55px;
+		margin-right: 55px;
+	}
+	.div-paginador{
+		margin-left: 70px;
+		margin-right: 70px;
+	}
+}
+@media (max-width: 1200px) {
+	.section-catalogo > h1{
+		font-size: 3rem;
+		margin-left: 50px;
+		margin-right: 50px;
+		line-height: normal;
+	}
+	.div-categorias{
+		margin-left: 36px;
+		margin-right: 36px;
+	}
+	.row{
+		margin-left: 35px;
+		margin-right: 35px;
+	}
+	.div-paginador{
+		margin-left: 50px;
+		margin-right: 50px;
+	}
+}
+@media (max-width: 992px) {
+	.section-catalogo{
+		padding-top: 50px;
+	}
+	.section-catalogo > h1{
+		font-size: 2.8rem;
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+	.row{
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+	.div-paginador{
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+}
+@media (max-width: 425px) {
+	.section-catalogo > h1{
+		margin-left: 16px;
+		margin-right: 16px;
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.row{
+		margin-left: 1px;
+		margin-right: 1px;
+	}
+	.div-paginador{
+		margin-left: 16px;
+		margin-right: 16px;
+	}
+	.producto-div > h4{
+		font-size: 1.3rem;
+	}
+	.producto-div > p{
+		font-size: 1.8rem;
+	}
+	.div-paginador{
+		justify-content: center !important;
+	}
+}
+@media (max-width: 375px) {
+	.section-catalogo > h1{
+		font-size: 2.2rem;
+	}
 }
