--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,11 +1,13 @@
 /* Seccion 1 */
 .section-1{
 	margin-bottom: 100px;
+	padding-left: 140px;
+	padding-right: 140px;
 }
 .content-home{
 	padding-top: 50px;
-	padding-left: 140px;
-	padding-right: 140px;
+	// padding-left: 140px;
+	// padding-right: 140px;
 }
 .carousel-fondo{
 	background-size: cover;
@@ -35,7 +37,7 @@
 	color: white;
 	font-size: 1.4rem;
 	font-weight: 500;
-	padding: 6px 25px;
+	padding: 6px 25px 3px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -69,12 +71,16 @@
 /* Seccion 2 */
 .section-2{
 	margin-bottom: 100px;
+	padding-left: 130px;
+	padding-right: 130px;
 }
 .section-2 > h2{
 	font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
 	margin-bottom: 30px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 .seccion-prod{
 	text-decoration: none;
@@ -88,8 +94,8 @@
 	height: 440px !important;
 	overflow: hidden;
 	border-radius: 7px;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
 	/* width: 302px; */
 	/* padding-bottom: 20px; */
 }
@@ -178,19 +184,24 @@
 /* Seccion 3 */
 .section-3{
 	margin-bottom: 100px;
+	padding-left: 140px;
+	padding-right: 140px;
 }
 .section-3 h2{
 	font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+}
+.section-3-header{
+	margin-bottom: 15px;
 }
 .btn-ver-catalogo{
 	background-color: #11434c;
 	color: white;
 	font-size: 1.4rem;
 	font-weight: 500;
-	padding: 6px 25px;
+	padding: 6px 25px 3px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -205,8 +216,8 @@
 	margin-bottom: 40px;
 	/* min-width: 170px; */
 	/* width: 100%; */
-	margin-left: 10px;
-	margin-right: 10px;
+	// margin-left: 10px;
+	// margin-right: 10px;
 }
 .seccion-3-prod > h4{
 	color: #11434c;
@@ -251,24 +262,33 @@
 	display: flex !important;
 	visibility: visible !important;
 }
+.col-custom{
+	padding-left: 15px;
+	padding-right: 15px;
+}
 
 
 /* Seccion 4 */
 .section-4{
 	margin-bottom: 50px;
+	padding-left: 140px;
+	padding-right: 140px;
+}
+.section-4-header{
+	margin-bottom: 15px;
 }
 .section-4 h2{
 	font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 .btn-ver-novedades{
 	background-color: #11434c;
 	color: white;
 	font-size: 1.4rem;
 	font-weight: 500;
-	padding: 6px 25px;
+	padding: 6px 25px 3px;
 	border-radius: 10px;
 	border: 2px solid #11434c;
 }
@@ -276,6 +296,10 @@
 	color: #11434c;
 	background-color: white;
 	border: 2px solid #11434c;
+}
+.section-4 > .row > div{
+	padding-left: 15px;
+	padding-right: 15px;
 }
 .seccion-4-novedad{
 	display: block;
@@ -353,4 +377,225 @@
     .col-custom{
         width: 20%;
     }
+}
+
+@media (max-width: 1600px) {
+	.section-1{
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+	.slider-div h1{
+		font-size: 4.5rem;
+		line-height: normal;
+	}
+	.section-2{
+		padding-left: 90px;
+		padding-right: 90px;
+	}
+	.section-3{
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+	.section-4{
+		padding-left: 100px;
+		padding-right: 100px;
+	}
+}
+
+@media (max-width: 1440px) {
+	.section-1{
+		padding-left: 70px;
+		padding-right: 70px;
+	}
+	.slider-div h1{
+		font-size: 3.9rem;
+	}
+	.section-2{
+		padding-left: 60px;
+		padding-right: 60px;
+	}
+	.section-3{
+		padding-left: 70px;
+		padding-right: 70px;
+	}
+	.section-4{
+		padding-left: 70px;
+		padding-right: 70px;
+	}
+}
+
+@media (max-width: 1200px) {
+	.section-1{
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	.slider-div h1{
+		font-size: 3.1rem;
+	}
+	.section-2{
+		padding-left: 40px;
+		padding-right: 40px;
+	}
+	.section-2 > h2{
+		font-size: 3rem;
+		line-height: normal;
+	}
+	.section-3{
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	.section-3-header > h2{
+		font-size: 3rem;
+		line-height: normal;
+	}
+	.section-4{
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+	.section-4-header > h2{
+		font-size: 3rem;
+		line-height: normal;
+	}
+}
+
+@media (max-width: 992px) {
+	.section-1{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.section-2{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.section-2-div{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	.section-2 > h2{
+		font-size: 2.8rem;
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.section-3{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.section-3-header > h2{
+		font-size: 2.8rem;
+	}
+	.section-4{
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+	.section-4-header > h2{
+		font-size: 2.8rem;
+	}
+}
+
+@media (max-width: 991px) {
+	.carousel-fondo{
+		display: none !important;
+		visibility: hidden;
+	}
+	.carousel-img{
+		display: block !important;
+		visibility: visible !important;
+		width: 100%;
+	}
+	.slider-div{
+		padding: 50px;
+	}
+}
+@media (max-width: 768px) {
+	.section-3-header{
+		flex-direction: column;
+		align-items: start !important;
+	}
+	.section-4-header{
+		flex-direction: column;
+		align-items: start !important;
+	}
+}
+@media (max-width: 576px) {
+	.slider-div h1{
+		font-size: 2.6rem;
+	}
+	.seccion-prod-cont{
+		height: 400px !important;
+	}
+}
+
+@media (max-width: 425px) {
+	.section-1{
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+	.slider-div h1{
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.slider-div{
+		padding: 40px;
+		align-items: center !important;
+	}
+	.slider-div a{
+		font-size: 1.1rem;
+	}
+	.section-2{
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+	.section-2 > h2{
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.section-3{
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+	.section-3-header{
+		align-items: center !important;
+	}
+	.section-3-header > h2{
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.seccion-3-prod > h4{
+		font-size: 1.3rem;
+	}
+	.seccion-3-prod > p{
+		font-size: 1.8rem;
+	}
+	.btn-ver-catalogo{
+		font-size: 1.1rem;
+	}
+	.section-4{
+		padding-left: 16px;
+		padding-right: 16px;
+	}
+	.section-4-header{
+		align-items: center !important;
+	}
+	.section-4-header > h2{
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.btn-ver-novedades{
+		font-size: 1.1rem;
+	}
+}
+
+@media (max-width: 375px) {
+	.slider-div h1{
+		font-size: 2.2rem;
+	}
+	.section-2 > h2{
+		font-size: 2.2rem;
+	}
+	.section-3-header > h2{
+		font-size: 2.2rem;
+	}
+	.section-4-header > h2{
+		font-size: 2.2rem;
+	}
 }
