--- a/src/app/pages/novedades-detalle/novedades-detalle.component.html
+++ b/src/app/pages/novedades-detalle/novedades-detalle.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="section-2">
-        <div class="d-flex justify-content-between align-items-center">
+        <div class="section-2-header d-flex justify-content-between align-items-center">
             <h2>Más Novedades</h2>
             <a href="" class="btn btn-ver-novedades">IR A NOVEDADES</a>
         </div>
