--- a/src/app/pages/novedades-detalle/novedades-detalle.component.scss
+++ b/src/app/pages/novedades-detalle/novedades-detalle.component.scss
@@ -1,10 +1,12 @@
-.section-novedades-detalle{
-    padding-left: 140px;
-    padding-right: 140px;
-}
+// .section-novedades-detalle{
+//     padding-left: 140px;
+//     padding-right: 140px;
+// }
 
 .section-1{
     padding-top: 80px;
+	margin-left: 140px;
+	margin-right: 140px;
     margin-bottom: 100px;
 }
 .img-detalle{
@@ -56,16 +58,25 @@
 }
 
 .section-2{
+	margin-left: 140px;
+	margin-right: 140px;
 	margin-bottom: 70px;
 }
 .section-2 h2{
 	font-size: 3.4rem;
 	color: #11434c;
 	font-weight: 600;
-	margin-bottom: 0px;
+	margin-bottom: 10px;
 }
-.section-2 .row{
-    margin-top: 30px;
+.section-2-header{
+	margin-bottom: 15px;
+}
+// .section-2 .row{
+//     margin-top: 30px;
+// }
+.section-2 > .row > div{
+	padding-left: 15px;
+	padding-right: 15px;
 }
 .btn-ver-novedades{
 	background-color: #11434c;
@@ -132,4 +143,120 @@
 	text-align: justify;
 	font-size: 1.1rem;
 	line-height: 1.1rem;
+}
+
+
+@media (max-width: 1600px) {
+    .section-1{
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .section-2{
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+}
+
+@media (max-width: 1440px) {
+    .section-1{
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+	.section-2{
+        margin-left: 70px;
+        margin-right: 70px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .section-1{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+	.section-2 h2{
+		font-size: 3rem;
+		line-height: normal;
+	}
+	.section-2{
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
+
+@media (max-width: 992px) {
+    .section-1{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+	.titulo-novedad{
+		font-size: 4rem;
+		line-height: normal;
+	}
+	.section-2 h2{
+		font-size: 2.8rem;
+	}
+    .section-2{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+@media (max-width: 768px) {
+	.section-1{
+		padding-top: 30px;
+	}
+	.sec-1-div{
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.titulo-novedad{
+		font-size: 3rem;
+	}
+	.section-2-header{
+		flex-direction: column;
+		align-items: start !important;
+	}
+}
+@media (max-width: 576px) {}
+@media (max-width: 425px) {
+    .section-1{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+	.titulo-novedad{
+		font-size: 2.2rem;
+		text-align: center;
+	}
+	.fecha-novedad{
+		font-size: 1.3rem;
+		text-align: center;
+	}
+	.sec-1-div > p{
+		font-size: 1.1rem;
+		line-height: normal;
+	}
+	.texto-especial{
+		font-size: 1.2rem !important;
+	}
+	.section-2 h2{
+		font-size: 2.4rem;
+		text-align: center;
+	}
+	.section-2{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+	.section-2-header{
+		align-items: center !important;
+	}
+	.btn-ver-novedades{
+		font-size: 1.1rem;
+	}
+}
+@media (max-width: 375px) {
+	.titulo-novedad{
+		font-size: 2rem;
+	}
+	.section-2 h2{
+		font-size: 2.2rem;
+	}
 }
