--- a/src/app/pages/novedades/novedades.component.html
+++ b/src/app/pages/novedades/novedades.component.html
@@ -1,7 +1,7 @@
 <div class="section_general section-novedades">
     <div class="section-1">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12 col-lg-8">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -36,12 +36,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="d-flex flex-column justify-content-center h-100">
+            <div class="col-12 col-lg-4">
+                <div class="contenedor-novedad-mini d-flex flex-column justify-content-center h-100">
                     <button class="btn btn-novedad-mini btn-novedad-mini-activa" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
                         <div class="novedad-mini d-flex align-items-center justify-content-center">
-                            <img class="img-fluid" src="assets/img/novedades/destacado01-mini.jpg" alt="">
-                            <div class="d-flex flex-column justify-content-center">
+                            <div class="img-novedad-mini d-flex">
+                                <img class="img-fluid" width="240" src="assets/img/novedades/destacado01-mini.jpg" alt="">
+                            </div>
+                            <div class="novedad-mini-texto d-flex flex-column justify-content-center">
                                 <p>20 de Febrero, 2023</p>
                                 <h3>Titular Novedad Destacada 01</h3>
                             </div>
@@ -49,8 +51,10 @@
                     </button>
                     <button class="btn btn-novedad-mini">
                         <div class="novedad-mini d-flex align-items-center justify-content-center" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
-                            <img class="img-fluid" src="assets/img/novedades/destacado02-mini.jpg" alt="">
-                            <div class="d-flex flex-column justify-content-center">
+                            <div class="img-novedad-mini d-flex">
+                                <img class="img-fluid" width="240" src="assets/img/novedades/destacado02-mini.jpg" alt="">
+                            </div>
+                            <div class="novedad-mini-texto d-flex flex-column justify-content-center">
                                 <p>20 de Febrero, 2023</p>
                                 <h3>Titular Novedad Destacada 02</h3>
                             </div>
@@ -58,8 +62,10 @@
                     </button>
                     <button class="btn btn-novedad-mini">
                         <div class="novedad-mini d-flex align-items-center justify-content-center" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
-                            <img class="img-fluid" src="assets/img/novedades/destacado03-mini.jpg" alt="">
-                            <div class="d-flex flex-column justify-content-center">
+                            <div class="img-novedad-mini d-flex">
+                                <img class="img-fluid" width="240" src="assets/img/novedades/destacado03-mini.jpg" alt="">
+                            </div>
+                            <div class="novedad-mini-texto d-flex flex-column justify-content-center">
                                 <p>20 de Febrero, 2023</p>
                                 <h3>Titular Novedad Destacada 03</h3>
                             </div>
@@ -163,7 +169,7 @@
                 </a>
             </div>
         </div>
-        <div class="d-flex justify-content-end">
+        <div class="div-paginacion d-flex justify-content-end">
             <button class="btn num-pagina pagina-activa">01</button>
             <button class="btn num-pagina">02</button>
             <button class="btn num-pagina">03</button>
